added thumbnails of images to gifts page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,22 +22,23 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-row>
-    <div class="legend">
-      <span id="mental-square"></span>
-      Mental
-    </div>
-    <div class="legend">
-      <span id="physical-square"></span>
-      Physical
-    </div>
-    <div class="legend">
-      <span id="nutritional-square"></span>
-      Nutritional
-    </div>
-  </ion-row>
+
   <div [ngSwitch]="gift">
     <ng-container *ngSwitchCase="'time'">
+      <ion-row>
+        <div class="legend">
+          <span id="mental-square"></span>
+          Mental
+        </div>
+        <div class="legend">
+          <span id="physical-square"></span>
+          Physical
+        </div>
+        <div class="legend">
+          <span id="nutritional-square"></span>
+          Nutritional
+        </div>
+      </ion-row>
       <ion-list  *ngFor="let task of tasks | async">
         <ion-card *ngIf="task.taken == 0" (click)="taskTapped(task)">
           <div class ="{{task.category}}">
@@ -54,16 +55,17 @@
     </ng-container>
 
     <ng-container *ngSwitchCase="'money'">
-
     <ion-list>
         <ion-card (click)="openPayments()">
           <div>
-            <ion-item >
+            <ion-item>
+              <ion-thumbnail item-left>
+                <img src="assets/img/gourmet_meal.jpg">
+              </ion-thumbnail>
               <ion-label>
                 <h3 class="task_title">Gourmet Meal</h3>
-                <!-- <img src="assets/img/gourmet_meal.jpg"> -->
                 <p>Gift a meal to their favorite restaurant</p>
-                <p>Price: from $55.00</p>
+                <p>Price: $55.00</p>
               </ion-label>
             </ion-item>
           </div>
@@ -71,12 +73,13 @@
 
         <ion-card (click)="openPayments()">
           <div>
-            <ion-item >
+            <ion-item>
+              <ion-thumbnail item-left>
+                <img src="assets/img/raw+ingredients+groceries+cooking.jpg">
+              </ion-thumbnail>
               <ion-label>
                 <h3 class="task_title">A Week of Blue Apron</h3>
-                <!-- <img src="assets/img/gourmet_meal.jpg"> -->
                 <p>Gift a week of Blue Apron</p>
-                <!-- <img src="assets/img/raw+ingredients+groceries+cooking.jpg"> -->
                 <p>Price: $65.00</p>
               </ion-label>
             </ion-item>
@@ -85,12 +88,13 @@
 
         <ion-card (click)="openPayments()">
           <div>
-            <ion-item >
+            <ion-item>
+              <ion-thumbnail item-left>
+                <img src="assets/img/friend+play+date.jpg">
+              </ion-thumbnail>
               <ion-label>
                 <h3 class="task_title">Virtual New Moms Group</h3>
-                <!-- <img src="assets/img/gourmet_meal.jpg"> -->
                 <p>Sign up to join a Virtual New Moms Group (0-6 mo post pregnancy)</p>
-                <!-- <img src="assets/img/raw+ingredients+groceries+cooking.jpg"> -->
                 <p>Price: $160.00</p>
               </ion-label>
             </ion-item>
@@ -99,13 +103,14 @@
 
         <ion-card (click)="openPayments()">
           <div>
-            <ion-item >
+            <ion-item>
+              <ion-thumbnail item-left>
+                <img src="assets/img/StockSnap_VF51PE5SCF.jpg">
+              </ion-thumbnail>
               <ion-label>
                 <h3 class="task_title">Cleaning Service</h3>
-                <!-- <img src="assets/img/gourmet_meal.jpg"> -->
                 <p>Contribute toward a cleaning service</p>
-                <!-- <img src="assets/img/StockSnap_VF51PE5SCF.jpg"> -->
-                <p>Price: from $55.00</p>
+                <p>Price: $55.00</p>
               </ion-label>
             </ion-item>
           </div>
@@ -113,13 +118,14 @@
 
         <ion-card (click)="openPayments()">
           <div>
-            <ion-item >
+            <ion-item>
+              <ion-thumbnail item-left>
+                <img src="assets/img/Babysitter.jpg">
+              </ion-thumbnail>
               <ion-label>
                 <h3 class="task_title">Babysitter</h3>
-                <!-- <img src="assets/img/gourmet_meal.jpg"> -->
                 <p>Contribute toward a babysitter</p>
-                <!-- <img src="assets/img/Babysitter.jpg"> -->
-                <p>Price: from $55.00</p>
+                <p>Price: $55.00</p>
               </ion-label>
             </ion-item>
           </div>
@@ -127,13 +133,14 @@
 
         <ion-card (click)="openPayments()">
           <div>
-            <ion-item >
+            <ion-item>
+              <ion-thumbnail item-left>
+                <img src="assets/img/Night+nurse.jpg">
+              </ion-thumbnail>
               <ion-label>
                 <h3 class="task_title">Night Nurse</h3>
-                <!-- <img src="assets/img/gourmet_meal.jpg"> -->
                 <p>Contribute toward a night nurse</p>
-                <!-- <img src="assets/img/Night+nurse.jpg"> -->
-                <p>Price: from $55.00</p>
+                <p>Price: $55.00</p>
               </ion-label>
             </ion-item>
           </div>
@@ -141,13 +148,14 @@
 
         <ion-card (click)="openPayments()">
           <div>
-            <ion-item >
+            <ion-item>
+              <ion-thumbnail item-left>
+                <img src="assets/img/love-romantic-bath-candlelight.jpg">
+              </ion-thumbnail>
               <ion-label>
                 <h3 class="task_title">Spa Day</h3>
-                <!-- <img src="assets/img/gourmet_meal.jpg"> -->
                 <p>Contribute toward a spa day</p>
-                <!-- <img src="assets/img/love-romantic-bath-candlelight.jpg"> -->
-                <p>Price: from $55.00</p>
+                <p>Price: $55.00</p>
               </ion-label>
             </ion-item>
           </div>
@@ -155,13 +163,14 @@
 
         <ion-card (click)="openPayments()">
           <div>
-            <ion-item >
+            <ion-item>
+              <ion-thumbnail item-left>
+                <img src="assets/img/lactation.jpg">
+              </ion-thumbnail>
               <ion-label>
                 <h3 class="task_title">Lactation Consultant</h3>
-                <!-- <img src="assets/img/gourmet_meal.jpg"> -->
                 <p>Contribute toward a lactation consultant</p>
-                <!-- <img src="assets/img/lactation.jpg"> -->
-                <p>Price: from $105.00</p>
+                <p>Price: $105.00</p>
               </ion-label>
             </ion-item>
           </div>
@@ -169,12 +178,13 @@
 
         <ion-card (click)="openPayments()">
           <div>
-            <ion-item >
+            <ion-item>
+              <ion-thumbnail item-left>
+                <img src="assets/img/fresh+aroma+therapy.jpg">
+              </ion-thumbnail>
               <ion-label>
                 <h3 class="task_title">Mommy Care Package</h3>
-                <!-- <img src="assets/img/gourmet_meal.jpg"> -->
                 <p>Mommy Care Package: Pain Relief and Pick-Me-Up Kit</p>
-                <!-- <img src="assets/img/fresh+aroma+therapy.jpg"> -->
                 <p>Price: $50.00</p>
               </ion-label>
             </ion-item>
